# pfhe

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: answer-verifier.md  contamination-reviewer.md  problem-generator.md
claudefiles/: PROJECT_INDEX.md  answer_key_corpus.md  arxiv_tex_pipeline.md  benchmark_icr_transform.md  benchmark_text_template_icr.md  curriculum_generator.md  gguf_vtensor_spec.zipZone.Identifier  language_eval_suite.md  offline_distillation_protocol.md  pfe_benchmark_spec.md  task_orchestrator_spec.md
claudefiles/gguf_vtensor_spec/: SKILL.md  __init__.py  carry_optimizer.py  dequant_kernels.py  test_backward.py  vtensor.py
notes/: 2025-12-22-project-progress.md  2025-12-28-inference-apis.md  2025-12-29-gluon-variance-analysis.md  2025-12-29-max-trainable-scale.md  2025-12-29-newton-schulz-precision.md  2025-12-29-quantized-optimizer-analysis.md
scripts/: analyze_optimizer_distributions.py  benchmark_gluon_variance.py  benchmark_muon_lowbit.py  benchmark_muon_quantized.py  benchmark_ns_precision.py  benchmark_optimizer_variants.py  benchmark_quantized_training.py  benchmark_real_gguf.py  cross_tokenizer_testbed.py  cross_tutor_gkd_demo.py  kl_divergence_demo.py  max_scale_analysis.py  memory_analysis_ns_precision.py  test_codebook_convergence.py  test_format_adherence.py  test_format_adherence_simple.py  test_format_self_eval.py  test_paged_attention.py
src/phfe/: __init__.py  cli.py
src/phfe/arxiv_pipeline/: __init__.py
src/phfe/benchmark/: __init__.py  contamination.py  loader.py
src/phfe/curriculum_generator/: __init__.py
src/phfe/distillation/: __init__.py  cross_tokenizer.py
src/phfe/icr_transform/: __init__.py  format_specs.py  method_libraries.py  template_generator.py
src/phfe/inference/: __init__.py  engine.py  gguf_cuda.py  gguf_loader.py  model.py  paged_attention.py
src/phfe/inference/gguf_vtensor/: __init__.py  carry_optimizer.py  dequant_kernels.py  fused_codebook_adam.py  fused_muon_4bit.py  iq3_opt_codebook.py  log_quantized_adam.py  newton_schulz_triton.py  quantized_adam.py  test_backward.py  vtensor.py
src/phfe/language_evals/: __init__.py
src/phfe/orchestrator/: __init__.py  observability.py  task_queue.py  tutor.py
tests/: __init__.py  conftest.py  test_benchmark_loader.py  test_contamination.py  test_cross_tokenizer.py  test_icr_transform.py  test_real_data_fixtures.py  test_task_queue.py
